# bazel-java-kotlin-sample

./: .bazelrc  .gitignore  MODULE.bazel  div-dev.bazelproject  projectview.bazelproject
calc_cli/: BUILD  rules.bzl
calc_cli/src/main/java/pro/bravit/calc/cli/: CalcCli.java
calc_core/: BUILD
calc_core/operations/addition/: BUILD  gen_tests.bzl
calc_core/operations/addition/src/main/java/pro/bravit/calc/operations/: Addition.java
calc_core/operations/multiplication/: BUILD
calc_core/operations/multiplication/src/main/java/pro/bravit/calc/operations/: Multiplication.java
calc_core/src/main/java/pro/bravit/calc/core/: BinaryOperation.java  Calculator.java  OperationRegistry.java
calc_div/: BUILD
calc_div/src/main/kotlin/pro/bravit/calc/operations/: Division.kt
calc_div/src/test/kotlin/pro/bravit/calc/operations/: DivisionTest.kt
calc_sub/: BUILD
calc_sub/src/main/kotlin/pro/bravit/calc/operations/: Subtraction.kt
