module(
    name = "calc",
    version = "1.0",
)

bazel_dep(name = "rules_java", version = "8.5.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

JUNIT_JUPITER_VERSION = "5.11.3"

JUNIT_PLATFORM_VERSION = "1.11.3"

bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "contrib_rules_jvm", version = "0.27.0")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.platform:junit-platform-console-standalone:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")